--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@headlessui/react": "^1.7.17",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "react": "^18.2.0",
+    "react-animate-on-scroll-animate.css": "^1.0.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-scroll": "^1.9.0",
